@@ -31,8 +31,6 @@
 #define FDFS_STAT_FUNC_STAT     0
 #define FDFS_STAT_FUNC_LSTAT    1
 
-#define FDFS_TRUNK_FILE_INFO_LEN  16
-
 #define FDFS_TRUNK_FILE_FILE_TYPE_OFFSET	0
 #define FDFS_TRUNK_FILE_ALLOC_SIZE_OFFSET	1
 #define FDFS_TRUNK_FILE_FILE_SIZE_OFFSET	5
@@ -41,9 +39,6 @@
 #define FDFS_TRUNK_FILE_FILE_EXT_NAME_OFFSET	17
 #define FDFS_TRUNK_FILE_HEADER_SIZE	(17 + FDFS_FILE_EXT_NAME_MAX_LEN + 1)
 
-#define FDFS_TRUNK_FILENAME_LENGTH (FDFS_TRUE_FILE_PATH_LEN + \
-		FDFS_FILENAME_BASE64_LENGTH + FDFS_TRUNK_FILE_INFO_LEN + \
-		1 + FDFS_FILE_EXT_NAME_MAX_LEN)
 #define TRUNK_CALC_SIZE(file_size) (FDFS_TRUNK_FILE_HEADER_SIZE + file_size)
 #define TRUNK_FILE_START_OFFSET(trunkInfo) \
 		(FDFS_TRUNK_FILE_HEADER_SIZE + trunkInfo.file.offset)
