@@ -32,6 +32,16 @@
 #define FDFS_LOGIC_FILE_PATH_LEN	10
 #define FDFS_TRUE_FILE_PATH_LEN		 6
 #define FDFS_FILENAME_BASE64_LENGTH     27
+#define FDFS_TRUNK_FILE_INFO_LEN  16
+
+#define NORMAL_LOGIC_FILENAME_LENGTH (FDFS_LOGIC_FILE_PATH_LEN + \
+		FDFS_FILENAME_BASE64_LENGTH + FDFS_FILE_EXT_NAME_MAX_LEN + 1)
+
+#define FDFS_TRUNK_FILENAME_LENGTH (FDFS_TRUE_FILE_PATH_LEN + \
+		FDFS_FILENAME_BASE64_LENGTH + FDFS_TRUNK_FILE_INFO_LEN + \
+		1 + FDFS_FILE_EXT_NAME_MAX_LEN)
+#define FDFS_TRUNK_LOGIC_FILENAME_LENGTH  (FDFS_TRUNK_FILENAME_LENGTH + \
+		(FDFS_LOGIC_FILE_PATH_LEN - FDFS_TRUE_FILE_PATH_LEN))
 
 #define FDFS_VERSION_SIZE		6
 
@@ -90,6 +100,17 @@
 #define FDFS_CHANGE_FLAG_TRACKER_LEADER	1  //tracker leader changed
 #define FDFS_CHANGE_FLAG_TRUNK_SERVER	2  //trunk server changed
 #define FDFS_CHANGE_FLAG_GROUP_SERVER	4  //group server changed
+
+#define IS_APPENDER_FILE(file_size)   (file_size == FDFS_APPENDER_FILE_SIZE)
+#define IS_TRUNK_FILE(file_size)     ((file_size&FDFS_TRUNK_FILE_MARK_SIZE)!=0)
+
+#define IS_SLAVE_FILE(filename_len, file_size) \
+	((filename_len > FDFS_TRUNK_LOGIC_FILENAME_LENGTH) || \
+	(filename_len > NORMAL_LOGIC_FILENAME_LENGTH && \
+	 !IS_TRUNK_FILE(file_size)))
+
+#define FDFS_TRUNK_FILE_TRUE_SIZE(file_size) \
+	(file_size & (~(FDFS_TRUNK_FILE_MARK_SIZE)))
 
 typedef struct
 {
