@@ -9,6 +9,7 @@ Version 3.04  2011-11-20
  * bug fixed: append file ok when check duplicate is on
  * storage/trunk_mgr/trunk_shared.[hc]: trunk_file_stat_func do not 
    use function pointer
+ * bug fixed: delete slave file correctly
 
 Version 3.03  2011-10-16
  * ignore existed link when sync link file
